# searust

./: '  .gitignore  :w  Cargo.toml  LICENSE  README.md  index.html  index.json
.github/: FUNDING.yml
searust-ui/: bun.lockb  package.json
searust-ui/hooks/: useFetch.js
searust-ui/pages/: Home.js  index.js
searust-ui/styles/: Home.module.css
src/: config.rs  indexer.rs  lexer.rs  main.rs  parser.rs  util.rs
