[package]
name = "searust"
version = "0.1.0"
edition = "2021"
authors = ["Salih Bozkaya  <bozkayasalih01x@gmail.com>"]
description = "a local search engine. Written in Rust"
repository = "https://rsship/searust"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.16"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.11"
field_accessor = "0.5.2"

